# RogueGlitchTools

./: CMakeLists.txt  README.MD
inc/: RogueGlitchDencrypter.hpp  app.hpp  convert.hpp  crypto.hpp  dependency_info.hpp  emscripten_browser_file.h  file.hpp  saveupgrade.hpp  scenes.hpp  types.hpp
src/: RogueGlitchDencrypter.cpp  app.cpp  convert.cpp  converter.cpp  crypto.cpp  dependency_info.cpp  file.cpp  saveupgrade.cpp  webui.cpp  webui.html
test/: .clang-tidy  convert.cpp  crypto.cpp  data.hpp  dummy.cpp
test/data/: SaveData.glitch  SaveData.used.glitch  SaveData__Deluxe.glitch
